2020-05-11 (0.12.19)
	ANDROID: complain when samsung keyboard detected
	COMMON: fix compile warnings

2020-05-11 (0.12.19)
	FLTK: Fix compile warnings with updated gcc

2020-05-10 (0.12.19)
	COMMON: Fix ABSMIN/ABSMAX transposed #96

2020-05-09 (0.12.19)
	COMMON: Fix crash when passing non-array to CHART
	SDL: show icon in linux build

2020-05-07 (0.12.19)
	COMMON: Fix image.save() to array destination

2020-05-04 (0.12.19)
	COMMON: INPUT crash #99
	COMMON: Fix compile warnings with updated gcc

2020-03-07 (0.12.19)
	COMMON: implement DEFINEKEY undo #92
	UI: added R157 colour theme #94

2020-02-13 (0.12.19)
	AUDIO: fix integration with latest version of miniaudio library

2020-02-13 (0.12.18)
	Fix path for HOME constant

2020-02-08 (0.12.18)
	SDL: fix issue #81 - numlock handling
	FLTK: added live editing menu item
	COMMON: increase stack size to 1024

2019-12-21 (0.12.17)
	SDL: fix issue #81 - numlock handling

2019-12-15 (0.12.17)
	FLTK: add online samples command
	FLTK: fix tab resizing

2019-12-07 (0.12.17)
	FLTK: fix memory leaks
	FLTK: implement audio
	UI: add menu control key indicators

2019-11-30 (0.12.17)
	ANDROID: fix module access in newer android versions.
	UI: code cleanup

2019-11-30 (0.12.17)
	FLTK: fix color display
	FLTK: add clear console command
	COMMON: fix dirwalk error handling

2019-11-23 (0.12.17)
	COMMON: Fix select case by func. Closes #83
	COMMON: update dependencies

2019-08-23 (0.12.16)
	ANDROID: fix ChromeOS crash when restarting over existing instance

2019-08-19 (0.12.15)
	ANDROID: fix issue with crash on minimise with ChromeOS
	ANDROID: fix permission issue with share command
	ANDROID: (internal) update to androidx

2019-07-27 (0.12.15)
	SDL: added -n command line option to run then not pause for back key

2019-07-10 (0.12.15)
	SDL: update editor find and replace

2019-06-27 (0.12.15)
	FLTK: file file save as
	UI: fix reported crash in android printing null

2019-06-22 (0.12.15)
	FLTK: reactivated the FLTK port using FLTK v1.4
