@@ -55,42 +55,42 @@ extern "C" {
  * special seperators too like INPUT, APPEND, FORSEP
  * and, of course, root commands like REPEAT-UNTIL, IF, etc
  */
-enum keyword {                // line 50
+enum keyword {
   kwTYPE_INT = 0x1, /* 32b Integer */
   kwTYPE_NUM, /* 64b Real */
+  kwTYPE_ADDOPR, /* ADD/SUB operator */
+  kwTYPE_MULOPR, /* MUL/DIV/IDIV operator */
+  kwTYPE_VAR, /* Variable */
+  kwTYPE_LEVEL_BEGIN, /* Parenthesis ( */
+  kwTYPE_LEVEL_END, /* Parenthesis ) */
+  kwTYPE_EVPUSH, /* PUSH R */
+  kwTYPE_EVPOP, /* POP L */
+  kwTYPE_CALLF, /* Call a build-in function */
   kwTYPE_STR, /* String */
   kwTYPE_LOGOPR, /* Logical operator */
   kwTYPE_CMPOPR, /* Comparation operator */
-  kwTYPE_ADDOPR, /* ADD/SUB operator */
-  kwTYPE_MULOPR, /* MUL/DIV/IDIV operator */
   kwTYPE_POWOPR, /* POW(x,y) operator */
   kwTYPE_UNROPR, /* Unary operator */
-  kwTYPE_VAR, /* Variable */
-  kwTYPE_UDS_EL, /* Structure element */
-  kwTYPE_SEP, /* Separator */
-  kwTYPE_LINE, /* Debug info: SOURCE LINE */
-  kwTYPE_LEVEL_BEGIN, /* Parenthesis ( */
-  kwTYPE_LEVEL_END, /* Parenthesis ) */
-  kwTYPE_EOC, /* End-Of-Command mark */
-  kwTYPE_EVPUSH, /* PUSH R */
-  kwTYPE_EVPOP, /* POP L */
   kwTYPE_EVAL_SC, /* Evalulation short-circuit begin */
-  kwTYPE_CALLF, /* Call a build-in function */
-  kwTYPE_CALLP, /* Call a build-in procedure */
   kwTYPE_CALL_UDF, /* Call user defined function */
+  kwTYPE_CALLEXTF, /* Call an external function */
+  kwTYPE_PTR, /* Address pointer, eg f=@foo */
+  kwBYREF, /* end eval switch block */
   kwTYPE_CALL_UDP, /* Call user defined procedure */
   kwTYPE_CALL_PTR, /* Call user defined procedure or function from address pointer */
   kwTYPE_CALL_VFUNC, /* Call virtual function */
-  kwTYPE_CALLEXTF, /* Call an external function */
   kwTYPE_CALLEXTP, /* Call an external procedure */
   kwTYPE_CRVAR, /* Create dynamic variable (PARAMETERS OR LOCALS) */
   kwTYPE_RET, /* Return from UDF|UDP */
   kwTYPE_PARAM, /* Parameters */
-  kwTYPE_PTR, /* Address pointer, eg f=@foo */
+  kwTYPE_CALLP, /* Call a build-in procedure */
+  kwTYPE_EOC, /* End-Of-Command mark */
+  kwTYPE_UDS_EL, /* Structure element */
+  kwTYPE_SEP, /* Separator */
+  kwTYPE_LINE, /* Debug info: SOURCE LINE */
   kwLOCAL, /* Create local variables */
   kwFUNC, /* USER DEFINED FUNCTION */
   kwPROC, /* USER DEFINED PROCEDURE */
-  kwBYREF,
   kwDECLARE,
   kwIMPORT,
   kwEXPORT,
