@@ -1,3 +1,6 @@
+2020-06-06 (0.12.19)
+	COMMON: minor performance tweak
+
 2020-05-11 (0.12.19)
 	ANDROID: complain when samsung keyboard detected
 	COMMON: fix compile warnings
